[workspace]
members = [
  "crates/value",
  "crates/formatter",
  "crates/function",
  "crates/codegen",
  "crates/macros",
  "crates/lib",
]
resolver = "2"

exclude = ["examples"]

[workspace.package]
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/zaytsev/fluent-static"
repository = "https://github.com/zaytsev/fluent-static"
license = "MIT"
authors = ["Sergey Zaytsev <sergey@zzlabs.xyz>"]
categories = ["localization", "internationalization"]
keywords = ["localization", "l10n", "i18n", "internationalization", "fluent"]

[workspace.dependencies]
fluent-syntax = "0.11"
fluent-bundle = "0.15"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
thiserror = "1"
paste = "1.0"
convert_case = "0.6"
unic-langid = { version = "0.9", features = ["unic-langid-macros"] }
once_cell = "1"
accept-language = "3.1"
intl_pluralrules = "7"
wax = { version = "0.6.0" }

pretty_assertions = "1.4"
trybuild = "1"

fluent-static = { path = "crates/lib" }
fluent-static-codegen = { path = "crates/codegen" }
fluent-static-macros = { path = "crates/macros" }
fluent-static-value = { path = "crates/value" }
fluent-static-function = { path = "crates/function" }
