[package]
name = "fluent-static-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-syntax = { workspace = true }
fluent-bundle = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
unic-langid = { workspace = true }
once_cell = { workspace = true }
accept-language = { workspace = true }
