[package]
name = "fluent-static-codegen"
version = "0.4.0"
description = "Automatically generate Rust functions from Fluent message files for streamlined localization in Rust applications."
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "README.md", "CHANGELOG.md"]
exclude = ["test/*"]

[lib]
path = "src/lib.rs"

[dependencies]
fluent-syntax = { workspace = true }
fluent-bundle = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
unic-langid = { workspace = true }
once_cell = { workspace = true }
accept-language = { workspace = true }
