[package]
name = "fluent-static"
version.workspace = true
edition.workspace = true

[dependencies]
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }
once_cell = { workspace = true }
accept-language = { workspace = true }

axum-core = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
http = { version = "1.1", optional = true }

maud = { version = "0.26", optional = true }

[features]
default = []

axum = ["dep:axum-core", "dep:async-trait", "dep:http"]
maud = ["dep:maud"]
