[package]
name = "fluent-static-codegen"
version = "0.6.1"
description = "Automatically generate Rust functions from Fluent message files for streamlined localization in Rust applications."
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "README.md", "CHANGELOG.md"]
exclude = ["tests/*"]

[lib]
path = "src/lib.rs"

[dependencies]
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
intl_pluralrules = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
fluent-static-value = { workspace = true }
fluent-static-function = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
trybuild = { workspace = true }
fluent-static = { workspace = true }
