[package]
name = "fluent-static"
version = "0.5.0"
description = "Automatically generate Rust functions from Fluent message files for streamlined localization in Rust applications."
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "README.md", "CHANGELOG.md"]

[lib]
path = "src/lib.rs"

[dependencies]
unic-langid = { workspace = true }
once_cell = { workspace = true }
intl_pluralrules = { workspace = true }

axum-core = { version = "0.5", optional = true }
axum-extra = { version = "0.10", optional = true, features = ["cookie"] }
async-trait = { version = "0.1", optional = true }
http = { version = "1.3", optional = true }
accept-language = { workspace = true, optional = true }

maud = { version = "0.27", optional = true }

thiserror = { workspace = true }

fluent-static-macros = { workspace = true }
fluent-static-value = { workspace = true }
fluent-static-function = { workspace = true }
fluent-static-formatter = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []

icu = ["dep:fluent-static-formatter"]

axum = [
  "dep:axum-core",
  "dep:async-trait",
  "dep:http",
  "dep:axum-extra",
  "dep:accept-language",
]
maud = ["dep:maud"]
