[package]
name = "fluent-static-macros"
version = "0.1.1"
description = "Automatically generate Rust functions from Fluent message files for streamlined localization in Rust applications."
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "README.md", "CHANGELOG.md"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
fluent-static-codegen = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
fluent-static = { workspace = true }
