[package]
name = "axum"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5"

maud = { version = "0.27", features = ["axum"] }

fluent-static = { workspace = true, features = ["axum", "maud"] }

anyhow = "1"
